added tags in swagger comments
