# docs/swagger.json
@@ -19,8 +19,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "login"
+                ],
                 "summary": "LogIn",
-                "operationId": "login",
                 "parameters": [
                     {
                         "description": "data for login",
@@ -60,8 +62,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "registration"
+                ],
                 "summary": "SignUp",
-                "operationId": "registration",
                 "parameters": [
                     {
                         "description": "data for registration",
